set path fill-opacity=0.5

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 })
                 .attr("fill", function(d, i) {
                     return color1(i);
-                });
+                })
+                .attr("fill-opacity", 0.5);
 
         svg.selectAll("g").selectAll("text")
             .data(function(d) {
