--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         .attr("height", height);
 
     var xScale = d3.scale.linear()
-        .domain([0, 500])
+        .domain([0, 652])
         .range([0, width]);
     
     var yScale = d3.scale.linear()
-        .domain([-200, -500])
-        .range([height, 0]);
+        .domain([0, 613])
+        .range([0, height]);
     
     var pavement = d3.svg.line()
         .interpolate("linear")
