--- a/index.html
+++ b/index.html
@@ -69,21 +69,34 @@
                 .attr("fill-opacity", 0.5);
         
         svg.selectAll("g")
+            .append("rect")
+                .attr("x", function(d) { 
+                    return (xScale(d.geometry.center[0])-60); 
+                 })
+                .attr("y", function(d) { 
+                    return (yScale(d.geometry.center[1])-30); 
+                })
+                .attr("rx", 10)
+                .attr("ry", 10)
+                .attr("width", 120)
+                .attr("height", 60)
+                .attr("fill", "black")
+                .attr("fill-opacity", 0.5)
+                .attr("style", "stroke: grey; stroke-width: 1px");
+
+        svg.selectAll("g")
             .append("text")
-                .attr("class", "perc")
                 .attr("x", function(d) { 
                     return xScale(d.geometry.center[0]); 
-                 })
+                })
                 .attr("y", function(d) { 
                     return yScale(d.geometry.center[1]); 
                 })
-                .attr("fill", function(d, i) {
-                    return color1(i+1);
-                })
-                .attr("style", "font-size: 12px;")
+                .attr("style", "font-size: 15px;")
+                .attr("fill", "white")
                 .attr("text-anchor", "middle")
                 .text(function(d) { return d.properties.zone_name;} );
-           
+
     });
 
     d3.select("#btn_save").on("click", function() {
