modify font to 'sans-serif'

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 .attr("y", function(d) { 
                     return yScale(d.geometry.center[1]); 
                 })
-                .attr("style", "font-size:" + font_size + "px")
+                .attr("style", "font:" + font_size + "px sans-serif;")
                 .attr("fill", "white")
                 .attr("fill-opacity", 1.0)
                 .attr("text-anchor", "middle");
